# vllm-inference-blueprint

./: .gitignore  Cargo.toml  blueprint.json
.github/workflows/: release.yml
contracts/: foundry.toml  remappings.txt
contracts/script/: RegisterBlueprint.s.sol
deploy/: register-blueprint.sh
metadata/: blueprint-metadata.json
operator/: Cargo.toml
operator/src/: config.rs  lib.rs  server.rs
sdk/: package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
sdk/scripts/: http-e2e.mjs  local-onchain-proof.sh  onchain-e2e.mjs
sdk/src/: account.ts  adapters.ts  client.test.ts  client.ts  eip712.ts  funding.test.ts  funding.ts  index.ts  spendAuth.test.ts  spendAuth.ts  types.ts  wagmi.ts
