[workspace]
members = ["operator"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tangle-network/llm-inference-blueprint"

[workspace.dependencies]
blueprint-sdk = { version = "0.2.0-alpha.6", features = ["std", "tangle", "macros"] }
alloy = { version = "1", features = ["full", "signer-local", "provider-http"] }
alloy-sol-types = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
thiserror = "2"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
prometheus = "0.13"
futures-util = "0.3"
tokio-stream = "0.1"

# Point the blueprint-sdk deps at our local checkout so we reuse its Cargo.lock
# (has a pre-yank copy of core2 resolved).
# core2 was entirely yanked from crates.io (all versions). libp2p-core ->
# multihash pulls in core2 = "^0.4.0" transitively. Point at the local cargo
# cache copy so cargo doesn't try to re-resolve from the registry.
[patch.crates-io]
core2 = { git = "https://github.com/tangle-network/core2", branch = "master" }
