[package]
name = "llm-inference"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "llm_inference"
path = "src/lib.rs"

[[bin]]
name = "llm-operator"
path = "src/main.rs"

# Minimal HTTP-only operator for E2E tests — skips BlueprintRunner and
# Tangle Substrate, runs just the HTTP server + billing client.
[[bin]]
name = "operator-lite"
path = "src/bin/operator_lite.rs"

[dependencies]
blueprint-sdk = { workspace = true, features = ["tee"] }
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }

# Shared inference operator infrastructure (billing, metrics, health, server helpers)
tangle-inference-core = { git = "https://github.com/tangle-network/tangle-inference-core", branch = "master" }

# Web framework (for OpenAI-compatible HTTP server)
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["cors", "limit", "trace", "timeout"] }

# Config
config = "0.14"
dotenvy = "0.15"

# Metrics
prometheus = { workspace = true }

# Streaming
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# Misc
bytes = "1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
blueprint-router = { git = "https://github.com/tangle-network/blueprint", branch = "main" }
blueprint-core = { version = "0.2.0-alpha.4" }
blueprint-sdk = { version = "0.2.0-alpha.5", features = ["testing", "tangle"] }
blueprint-anvil-testing-utils = { git = "https://github.com/tangle-network/blueprint", branch = "main" }
wiremock = "0.6"
alloy-primitives = "1"
alloy-sol-types = "1"
tower = { version = "0.5", features = ["util"] }
futures-util = "0.3"
